fix location z-index

--- a/src/scenes/Current.css
+++ b/src/scenes/Current.css
@@ -97,4 +97,5 @@
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
